// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion renders a badge correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="accordion-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box relative"
            style={
              Object {
                "top": "1px",
              }
            }
          >
            <div
              className="badge info middle"
            >
              <div
                className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="box contentCenter xsDisplayFlex"
                  >
                    <span
                      className="inverse alignStart breakWord Text fontWeightSemiBold fontSize200"
                    >
                      Try it out!
                    </span>
                  </div>
                </div>
              </div>
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="default alignStart breakWord Text fontSize300 fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders a title correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="accordion-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Accordion Test"
          >
            Accordion Test
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    />
  </div>
</div>
`;

exports[`Accordion renders an error correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="accordion-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="there is an error"
            className="error icon iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="error alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="default alignStart breakWord Text fontSize300 fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders an icon button correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="accordion-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <button
            aria-label="Get help"
            className="parentButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="button tapTransition enabled"
            >
              <div
                className="pog lightGray"
                style={
                  Object {
                    "height": 24,
                    "width": 24,
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  aria-label=""
                  className="default icon iconBlock"
                  height={12}
                  role="img"
                  viewBox="0 0 24 24"
                  width={12}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="default alignStart breakWord Text fontSize300 fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders an icon correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="accordion-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="locked"
            className="default icon iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="default alignStart breakWord Text fontSize300 fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders content correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="accordion-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="default alignStart breakWord Text fontSize300 fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders the base correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="accordion-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    />
  </div>
</div>
`;
